[project]
name = "bridgeportbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fbchat-muqit>=1.2.2",
    "openai>=2.38.0",
    "openapi-client",
    "requests>=2.34.2",
    "spotipy>=2.26.0",
    "sqlitedict>=2.1.0",
]

[tool.uv.sources]
openapi-client = { git = "https://github.com/kagisearch/kagi-openapi-python.git" }
